# zkvm-bench

./: README.md  run.sh
mllib/: Cargo.toml
mllib/src/: lib.rs  mnist.rs  processing.rs  shape.rs
risc0/ecdsa/: ecdsa.json
risc0/ecdsa/host/: Cargo.toml
risc0/ecdsa/host/src/: main.rs
risc0/ecdsa/methods/guest/: Cargo.toml
risc0/ecdsa/methods/guest/src/: main.rs
risc0/merkle/: merkle.json
risc0/merkle/host/: Cargo.toml
risc0/merkle/host/src/: main.rs
risc0/merkle/methods/guest/: Cargo.toml
risc0/merkle/methods/guest/src/: main.rs
risc0/ml/: mnist.json  mnist_inp.json
risc0/ml/host/: Cargo.toml
risc0/ml/host/src/: main.rs
risc0/ml/methods/guest/: Cargo.toml
risc0/ml/methods/guest/src/: main.rs
sp1/ecdsa/elf/: riscv32im-succinct-zkvm-elf
sp1/ecdsa/program/: Cargo.toml
sp1/ecdsa/program/src/: main.rs
sp1/ecdsa/script/: Cargo.toml
sp1/merkle/elf/: riscv32im-succinct-zkvm-elf
sp1/merkle/program/: Cargo.toml
sp1/merkle/program/src/: main.rs
sp1/merkle/script/: Cargo.toml  dlrm.json  ecdsa.json  merkle.json  mnist.json
sp1/ml/: .gitignore  README.md  run.sh
sp1/ml/elf/: riscv32im-succinct-zkvm-elf
sp1/ml/lib/: Cargo.toml
sp1/ml/lib/src/: dlrm.rs  helper.rs  lib.rs  op.rs  shape.rs
sp1/ml/program/: Cargo.toml
sp1/ml/program/src/: main.rs
sp1/ml/script/: Cargo.toml
