[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.1.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
mllib = {path="../../../mllib"}
clap = { version = "4.0", features = ["derive", "env"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }